--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ version: 1.7.0
 homepage: https://jaweii.github.io/Flutter_beautiful_popup/example/build/web
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.12.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   auto_size_text: ^3.0.0-nullsafety.0
-  image: ^3.0.4
+  image: 4.1.0
 
 dev_dependencies:
   flutter_test:
